kubernetes/traefik/nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-nodeport
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: web
      nodePort: 30080
      port: 80
      targetPort: web
    - name: websecure
      nodePort: 30443
      port: 443
      targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
