kubernetes/traefik/patch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  annotations:
    metallb.universe.tf/allow-shared-ip: "main"
