kubernetes/traefik/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: authentik-auth@kubernetescrd
spec:
  rules:
    - host: traefik.linkvt.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: traefik
                port:
                  name: traefik
  tls:
    - hosts:
        - traefik.linkvt.de
      secretName: traefik-certificate
